Fix left margin for non-alignnone images

--- a/css/_respond.scss
+++ b/css/_respond.scss
@@ -114,6 +114,10 @@
 				max-width: 100%;
 				margin-left: 0;
 			}
+
+			img.size-full.alignnone {
+				margin-left: 0;
+			}
 		}
 	}
 }
